CSS: Fixed responsiveness for media screens and gallery images alignment

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -216,9 +216,10 @@ footer>p {
 }
 /*bottom grid*/
 .bottom-grid {
-    padding: 5em;
-    display: grid;
-    grid-gap: 2em;
+        padding: 2em;
+        display: grid;
+        grid-gap: 2em;
+        margin-bottom: 4em;
 
 }
 
@@ -249,6 +250,7 @@ footer>p {
     margin: auto;
     overflow: auto;
     padding-bottom: 60px;
+    margin-bottom: 50px;
 
 }
 
@@ -301,10 +303,9 @@ footer>p {
     display:block;
     background-color: transparent;
     border: 1px solid transparent;
-    margin-left: 70px;
+    margin: 0 auto;
     margin-bottom: 1px;
     float: center;
-  
 }
 
 .thin {
@@ -383,7 +384,7 @@ footer>p {
 @media screen and (max-width: 950px) {
 
     body {
-        width: fit-content;
+        
         block-size: fit-content;
     }
 
@@ -407,17 +408,16 @@ footer>p {
         margin: 0 auto;
     }
 
-    .container-form {
-        width: 100%;
+    .holdingcontainer {
+        flex-direction: column;
+        align-items: center;
     }
-
-    .contact-box {
-        width: inherit;
+    .panels {
+        width: 80%;
     }
-
-
-    #photo {
-        column-count: 1;
+    .mono p{
+        width: 80%;
+        margin: 0 auto;
     }
 }
 
